# Go-blog

./: .env  .gitignore  AGENTS.md  ANALYSIS_REPORT.md  CICD.md  CLAUDE.md  EMAIL_LOGIN_FIXES.md  EXPERIMENT_REPORT.docx  EXPERIMENT_REPORT.md  EXPERIMENT_REPORT_UPDATED.docx  GEMINI.md  README.md  README.zh.md  build_log.txt  codegen.yml  docker-compose.yml  dump.sql  eslint.config.cjs  eslint_output.txt  fix-typescript-errors.md  index.html  index.static.html  latest-report.json  lighthouse-report.json  package.json  pnpm-lock.yaml  postcss.config.cjs  recover_data.sql  stats.html  tailwind.config.cjs  test-apollo-import.ts  test-apollo-imports.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vite.static.config.ts  vitest.config.ts  博客平台设计实验报告.docx
.gemini/: settings.json
ai_service/: .env  .env.example  main.py  model_config.yaml  pyproject.toml
backend/: .env  .env.example  CONFIG.md  Dockerfile  EMAIL_SETUP_COMPLETE.md  blog_platform.db  blog_platform.db.bak  data.db  fix_stats_all.go  generate.go  go.mod  go.sum  gqlgen.yml  main.go  set_env.sh  test_email.sh
deploy/: DEPLOYMENT.md  ENV_SETUP_GUIDE.md  README.md  REMAINING_SECURITY_ISSUES.md  SECURITY_AUDIT.md  SECURITY_AUDIT_2025-11-07.md  SECURITY_CHECKLIST.md  SECURITY_CHECK_2025-11-07_15-36.md  SECURITY_FIX_SUMMARY.md  deploy.sh
docs/: gemini_api_ref.md  vertex_ai_ops_guide.md  前端功能完整清单.md  新增功能使用指南.md
src-tauri/: Cargo.toml  blog-backend-aarch64-apple-ios-sim  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+308 files in other folders)
