[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.1",
    "ijson>=3.5.0",
    "leidenalg>=0.11.0",
    "networkx>=3.6.1",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-igraph>=1.0.0",
    "uvicorn>=0.40.0",
]
