[package]
name = "c404-blog"
version = "0.1.0"
description = "A modern blog platform"
authors = ["C404 Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-liquid-glass = "0.1.6"

[lib]
name = "c404_blog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "c404-blog"
path = "src/main.rs"
bench = false
